# SimpleBoard

./: .gitignore  README.md
DashBoard/: DashBoard.sln
DashBoard/DashBoard/: App.config  App.xaml  App.xaml.cs  DashBoard.csproj  DashBoardClient.cs  DashBoard_Client.cs  MainWindow.xaml  MainWindow.xaml.cs
DashBoard/DashBoard/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Server/: CMakeLists.txt  Makefile  build.sh  main.c  print.c  r_type.h  system.h  test.out
Server/include/print/: FontColor.hpp  PrintCPUInterfaceInfo.hpp  PrintInterface.hpp  PrintNetworkUsageInfo.hpp  ProgressBar.hpp  TitleBar.hpp
Server/include/resource/: CPUInterfaceInfo.hpp  CPUResource.hpp  CPUUsageInfo.hpp  MemoryResource.hpp  NetworkResource.hpp  SystemInterfaceInfo.hpp  SystemResourceSerializer.hpp  ThreadMemoryUsage.hpp
Server/include/service/: PrintService.hpp  ServerService.hpp
Server/include/util/: AsioDefine.hpp  AsioSession.hpp  AsioSessionList.hpp  Result.hpp  ReturnedThread.hpp  StringUtil.hpp
Server/resource/: cpu.c  info.h  memory.c  network.c
Server/src/main/: CMakeLists.txt  Resource.cpp  main.cpp
Server/src/print/: CMakeLists.txt  PrintCPUInterfaceInfo.cpp  PrintMemoryUsageInfo.cpp  TitleBar.cpp
Server/src/resource/: CMakeLists.txt  CPUInterfaceInfo.cpp  MemoryResource.cpp  MemoryUsageInfo.cpp  NetworkInterfaceList.cpp  NetworkResource.cpp  NetworkUsageInfo.cpp  SystemInterfaceInfo.cpp  SystemResource.cpp  SystemResourceSerializer.cpp  SystemUsageInfo.cpp  ThreadNetworkUsage.cpp
Server/src/service/: ServerService.cpp
Server/src/test/: CMakeLists.txt  print_test.cpp  resource_test.cpp  service_test.cpp
Server/src/util/: ArgvUtil.cpp  AsioBroadcastServerThread.cpp  AsioSessionList.cpp  CMakeLists.txt  ThreadManager.cpp
ServerCPP/: CMakeLists.txt  resource_server
ServerCPP/include/main/: Resource.hpp
ServerCPP/include/print/: FontColor.hpp  Print.hpp  PrintCPUInterfaceInfo.hpp  PrintMemoryUsageInfo.hpp  PrintNetworkUsageInfo.hpp  PrintSystsemResource.hpp  ProgressBar.hpp  TitleBar.hpp
ServerCPP/include/resource/: CPUInterfaceInfo.hpp  CPUResource.hpp  CPUUsageInfo.hpp  MemoryUsageInfo.hpp  NetworkInterfaceList.hpp  NetworkResource.hpp  NetworkUsageInfo.hpp  SystemResource.hpp  SystemUsageInfo.hpp  ThreadCPUUsage.hpp  ThreadNetworkUsage.hpp
ServerCPP/include/service/: PrintService.hpp  ServiceFactory.hpp  ServiceInterface.hpp  ServiceList.hpp  SystemResourceService.hpp
ServerCPP/include/util/: ArgvItem.hpp  ArgvItemList.hpp  ArgvUtil.hpp  AsioBroadcastServerThread.hpp  ByteBuffer.hpp  Result.hpp  ResultList.hpp  ReturnedThread.hpp  Thread.hpp  ThreadManager.hpp
ServerCPP/src/: CMakeLists.txt
ServerCPP/src/main/: CMakeLists.txt  Resource.cpp  main.cpp  resource_server
ServerCPP/src/print/: CMakeLists.txt  FontColor.cpp  Print.cpp  PrintCPUInterfaceInfo.cpp  PrintInterface.cpp  PrintMemoryUsageInfo.cpp  PrintNetworkUsageInfo.cpp  PrintSystemResource.cpp  ProgressBar.cpp  TitleBar.cpp
ServerCPP/src/resource/: CMakeLists.txt  CPUInterfaceInfo.cpp  CPUResource.cpp  CPUUsageInfo.cpp  MemoryUsageInfo.cpp  NetworkResource.cpp  NetworkUsageInfo.cpp  SystemUsageInfo.cpp  ThreadCPUUsage.cpp  ThreadMemoryUsage.cpp  ThreadNetworkUsage.cpp
ServerCPP/src/service/: CMakeLists.txt  PrintService.cpp  ServerService.cpp  ServiceFactory.cpp  ServiceInterface.cpp  SystemResourceService.cpp
ServerCPP/src/test/: CMakeLists.txt  print_test.cpp  resource_test.cpp  service_test.cpp  util_test.cpp
ServerCPP/src/util/: ArgvItem.cpp  ArgvUtil.cpp  AsioBroadcastServerThread.cpp  AsioSession.cpp  CMakeLists.txt  Result.cpp  ResultList.cpp  StringUtil.cpp
